Fix printed code at bottom: wrap BattleStateManager block in <script> tag to avoid text rendering

--- a/index.html
+++ b/index.html
@@ -2189,7 +2189,8 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
     }
   };
   </script>
-/* Battle Replay System - State Manager Module */
+  <script>
+  /* Battle Replay System - State Manager Module */
   const BattleStateManager = {
   logEntries: [],
   stateSnapshots: [],
