--- a/index.html
+++ b/index.html
@@ -1927,6 +1927,17 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
             </div>
           </div>
           
+          <!-- Arena styles to match app typography/colors -->
+          <style id="arenaStyles">
+            #arenaBoard{background:rgba(255,255,255,0.02); border-top:2px solid rgba(255,255,255,0.06); margin-top:8px}
+            #arenaBoard .pill{display:flex;align-items:center;gap:6px;padding:4px 8px;border-radius:8px;background:#0b0b0b}
+            #arenaBoard .status-chip{background:#0b0b0b}
+            #arenaBoard img{image-rendering:pixelated}
+            .arena-title{color:#ffd; font-weight:700; font-size:14px; margin-bottom:6px}
+            .arena-overlay{display:flex;align-items:center;gap:6px;padding:4px 8px;border-radius:8px;font-weight:700;visibility:hidden;box-shadow:0 2px 10px rgba(0,0,0,.35)}
+            .arena-overlay img{width:16px;height:16px}
+          </style>
+
           <!-- Battle Log Content -->
           <div id="simLog" style="flex: 1; overflow-y: auto; padding: 16px; font-size: 14px; color: #ccc; line-height: 1.6; min-height: 0;" aria-live="polite">
             <div style="text-align: center; color: #666; font-style: italic; padding: 40px 20px;">
