--- a/index.html
+++ b/index.html
@@ -1936,6 +1936,8 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
             .arena-title{color:#ffd; font-weight:700; font-size:14px; margin-bottom:6px}
             .arena-overlay{display:flex;align-items:center;gap:6px;padding:4px 8px;border-radius:8px;font-weight:700;visibility:hidden;box-shadow:0 2px 10px rgba(0,0,0,.35)}
             .arena-overlay img{width:16px;height:16px}
+            /* Ensure the arena is visible by capping log height */
+            #simulationTab #simLog{ max-height: 320px; }
           </style>
 
           <!-- Battle Log Content -->
