Update arena sprites and add IDs to player images
Replaces placeholder images with specific sprite images for player and opponent in the arena section. Adds unique IDs to the img tags for easier DOM manipulation and updates image styles for improved appearance.

--- a/index.html
+++ b/index.html
@@ -1896,7 +1896,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
                 <span id="arenaPlayerEventText"></span>
               </div>
               <div style="display:flex; justify-content:center; align-items:center; height:96px;">
-                <img src="assets/placeholder.png" alt="player" style="width:64px;height:64px; filter: drop-shadow(0 0 6px #0f3);">
+                <img id="arenaPlayerSprite" src="sprites/1.png" alt="player" style="height:96px; width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #0f3);">
               </div>
               <div style="display:flex; gap:10px; justify-content:center; margin-top:6px;">
                 <div class="pill"><img src="assets/health.png" style="width:16px;height:16px;"><span id="arenaPlayerHP">10</span></div>
@@ -1912,7 +1912,7 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
                 <span id="arenaOpponentEventText"></span>
               </div>
               <div style="display:flex; justify-content:center; align-items:center; height:96px;">
-                <img src="assets/placeholder.png" alt="opponent" style="width:64px;height:64px; filter: drop-shadow(0 0 6px #f33);">
+                <img id="arenaOpponentSprite" src="sprites/2.png" alt="opponent" style="height:96px; width:auto; image-rendering:pixelated; filter: drop-shadow(0 0 6px #f33);">
               </div>
               <div style="display:flex; gap:10px; justify-content:center; margin-top:6px;">
                 <div class="pill"><img src="assets/health.png" style="width:16px;height:16px;"><span id="arenaOpponentHP">10</span></div>
